# Skyvault-

./: .gitignore  CONTEXT.md  README.md  expected_extraction_output.json  n8n_workflow_kyc_extraction.json  pyproject.toml  pytest.ini  sample_transcript_russian.txt
.github/workflows/: test.yml
app/: .env.example  __init__.py  emailer.py  extractor.py  main.py  pdf_filler.py  requirements.txt  run.py  test_extraction.py  validator.py
scripts/: run_tests.py
tests/: __init__.py  conftest.py  test_api.py  test_extractor.py  test_validator.py
